feat: complete SAM Infrastructure as Code implementation
🎯 PROBLEM SOLVED: No more manual AWS CLI commands!

✅ Complete SAM Template (template.yaml):
- IAM roles with permission boundaries
- Lambda functions (orchestrator + demo)
- API Gateway for GitHub webhooks
- CloudWatch monitoring and alarms
- S3 audit bucket with encryption
- CloudTrail for complete audit trail
- Secrets Manager for GitHub integration
- Budget controls and cost alerts

✅ Deployment Automation:
- One-command deployment: ./deploy.sh dev 123456 789012
- Environment-specific configs (dev/staging/prod)
- Automated build and deploy pipeline
- SAM CLI integration

✅ Developer Experience:
- npm run deploy:dev/staging/prod
- sam local start-api for local testing
- Comprehensive deployment documentation

✅ Security & Compliance:
- Permission boundaries prevent Q privilege escalation
- Complete audit trail in CloudTrail
- Encrypted storage and secure secrets
- Cost controls and monitoring

No more manual IAM commands - everything is now Infrastructure as Code! 🛫

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
 .env
 /dist
 /node_modules
+
+# AWS SAM
+.aws-sam/
+samconfig.toml.bak
+packaged-template.yaml
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Runtime
+.no-wing/
+response.json
