--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "no-wing",
   "version": "1.0.0",
-  "description": "AI development collaboration framework - autonomous AI teammate for AWS infrastructure",
+  "description": "Enterprise Developer+Q Vending and Onboarding System",
   "main": "dist/index.js",
   "bin": {
     "no-wing": "./dist/cli/index.js"
@@ -13,26 +13,20 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:unit": "jest --testPathPattern=unit",
-    "lint": "echo 'Linting not configured yet'",
     "clean": "rm -rf dist coverage .no-wing",
-    "prepublishOnly": "npm run clean && npm run build && npm test",
-    "release": "./scripts/release.sh",
-    "verify": "./scripts/verify-install.sh"
+    "prepublishOnly": "npm run clean && npm run build && npm test"
   },
   "keywords": [
-    "ai",
+    "enterprise",
+    "developer-onboarding", 
+    "ai-assistant",
     "aws",
-    "lambda",
-    "framework",
-    "automation",
-    "infrastructure",
-    "collaboration",
-    "devops",
-    "serverless",
-    "sam",
-    "cloudformation",
-    "iac"
+    "iam",
+    "governance",
+    "monitoring",
+    "compliance",
+    "vending",
+    "provisioning"
   ],
   "author": "Paul Chin Jr <pchinjr@gmail.com>",
   "license": "MIT",
@@ -50,42 +44,31 @@
   },
   "files": [
     "dist/",
-    "templates/",
-    "scripts/",
+    "docs/",
     "README.md",
     "LICENSE",
     "SECURITY.md"
   ],
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.0.0",
-    "@aws-sdk/client-ssm": "^3.0.0",
+    "@aws-sdk/client-cloudformation": "^3.0.0",
+    "@aws-sdk/client-cloudtrail": "^3.0.0",
+    "@aws-sdk/client-iam": "^3.0.0",
+    "@aws-sdk/client-organizations": "^3.0.0",
     "@aws-sdk/client-sts": "^3.0.0",
     "chalk": "^4.1.2",
     "commander": "^11.0.0",
-    "dotenv": "^16.0.0",
     "inquirer": "^8.2.6",
-    "jszip": "^3.10.1",
-    "ora": "^5.4.1"
+    "ora": "^5.4.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@aws-sdk/client-cloudwatch-logs": "^3.835.0",
-    "@aws-sdk/client-iam": "^3.835.0",
-    "@aws-sdk/client-lambda": "^3.835.0",
-    "@types/aws-lambda": "^8.10.150",
     "@types/inquirer": "^8.2.10",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
+    "@types/uuid": "^9.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.0.0",
     "typescript": "^5.0.0"
-  },
-  "peerDependencies": {
-    "aws-cli": "*"
-  },
-  "peerDependenciesMeta": {
-    "aws-cli": {
-      "optional": true
-    }
   }
 }
